--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>SOBRE ORÇAMENTO E ADMINISTRAÇÃO DO MINISTÉRIO PÚBLICO</h1>
+    <h1>VALE TUDO EM UMA ELEIÇÃO?</h1>
+    <h2>Para nós, não.!</h2>
     <p>Recentemente, foram divulgadas informações equivocadas e distorcidas sobre o orçamento e a administração do MPRS.</p>
     <p>Através deste conteúdo, buscamos esclarecer alguns pontos importantes, desmistificando algumas afirmações e apresentando dados reais sobre o orçamento do MPRS.</p>
     <p>O objetivo é fornecer uma visão clara e precisa sobre como o MPRS gerencia seus recursos, obtendo <a class="link" href="suplementacoes.html">suplementações orçamentárias</a> e buscando <a class="link" href="adicionais.html">recursos adicionais</a>, as <a class="link" href="orcamentos.html">diferenças entre orçamento real e contábil</a>, e <a class="link" href="investimentos.html">como os investimentos são realizados</a>.</p>
