--- a/adicionais.html
+++ b/adicionais.html
@@ -25,7 +25,13 @@
       <li><strong>Parceria com o Executivo:</strong> o MPRS cedeu temporariamente seu prédio histórico (o Palácio do MP) para abrigar a Casa Civil do Governo do Estado. Em contrapartida, o Poder Executivo comprometeu-se a custear toda a reforma do imóvel após a devolução. Essa reforma está orçada em mais de R$ 2 milhões e será custeada pelo Governo do Estado como forma de agradecimento pelo empréstimo do espaço.</li>
       <li><strong>Novas Fontes de Receita (Proposta junto ao CNMP):</strong> Buscamos também maneiras de aumentar receitas para o MPRS. Uma iniciativa recente foi provocar o Conselho Nacional do Ministério Público (CNMP) acerca da possibilidade de o MPRS cobrar por sua atuação em inventários extrajudiciais com partes incapazes. Atualmente não há cobrança por esse serviço, mas entendemos que poderia haver uma compensação financeira ao MP por esse trabalho. A proposta de alteração da Resolução nº 301/2024 do CNMP para permitir essa cobrança já está em análise desde 29 de abril de 2024. Se aprovada, poderá gerar uma receita adicional ao nosso orçamento, sem onerar o Estado (seria paga pelos envolvidos nesses procedimentos extrajudiciais).</li>
     </ul>
-    
+    <h3>Mas a cobrança de taxas não deveria ser criada por lei estadual?</h3>
+    <div class="container-retranca">
+      <div href="#lei" class="retranca">
+        Este movimento dá segurança à tramitação do projeto de lei a ser enviado.
+      </div>
+    </div>
+    <p id="lei">De fato, a cobrança de taxas deveria ser criada por lei estadual, aprovada pelo parlamento. Entretanto, experiências recentes, em que os Conselhos Nacionais impediram a tramitação de legislação estadual versando sobre receitas tributárias demonstram que é mais seguro se trilhar o caminho que estamos percorrendo. <strong> Após a aprovação da regulamentação pelo CNMP</strong>, será iniciado o processo legislativo na seara estadual, sem o risco de ter a tramitação do projeto barrada por decisão do Conselho Nacional. <strong>Este movimento dá segurança à tramitação do projeto de lei a ser enviado.</strong></p>
     <a href="index.html" class="link voltar">Voltar para a página principal</a>
   </div>
 </body>
